Added support for Java 8 (#11)
Added support for Java 8

Closes #8